Opened 14 years ago
Closed 11 years ago
#6692 closed bug (fixed)
Alt+ shortcut to increase icon size doesn't work
Reported by: | Meanwhile | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Alt+ shortcut to increase icon size doesn't work
Maybe because in this case the Shift key needs to be pressed to get a '+'?
'Alt-' works (and doesn't need Shift).
Revision used: hrev38882
Change History (6)
comment:1 by , 14 years ago
Version: | R1/alpha2 → R1/Development |
---|
comment:3 by , 14 years ago
Component: | - General → Applications/Tracker |
---|---|
Owner: | changed from | to
comment:5 by , 13 years ago
This shortcut will work or not work depending on your keymap. I have a proposed solution in http://dev.haiku-os.org/ticket/7428#comment:5
Note:
See TracTickets
for help on using tickets.
What app is this ticket referring to?