Tracker: Add semantic zoom in shortcut.

Fixes #6692

iif '+' is localed in shift + '=' in your keymap, add a shortcut for
Command + '=' to zoom in.